created calculator design, moved all operations into one single object

--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link href="styles/styles.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@700&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
+        <header>My Calculator</header>
+        <div id="container">
+            <div id="displayDiv">
+                9
+            </div>
+            <div id="keysDiv">
+                <div id="k7" class="numberbtn">7</div>
+                <div id="k8" class="numberbtn">8</div>
+                <div id="k9" class="numberbtn">9</div>
+                <div id="kDivide" class="operatorBtn">÷</div>
+                <div id="k4" class="numberbtn">4</div>
+                <div id="k5" class="numberbtn">5</div>
+                <div id="k6" class="numberbtn">6</div>
+                <div id="kMultiply" class="operatorBtn">×</div>
+                <div id="k1" class="numberbtn">1</div>
+                <div id="k2" class="numberbtn">2</div>
+                <div id="k3" class="numberbtn">3</div>
+                <div id="kSubtract" class="operatorBtn">−</div>
+                <div id="kDot"></div>
+                <div id="k0" class="numberbtn">0</div>
+                <div id="k+/-"></div>
+                <div id="kAdd" class="operatorBtn">+</div>    
+                <div id="kBackspace">←</div>
+                <div id="kC">c</div>
+                <div id="kEquals">=</div>
+            </div>
+        </div>
         <script src="js/rps.js" defer></script>
     </body>
 </html>
+
+<!--Create the functions that populate the display when you 
+    click the number buttons… you should be storing the 
+    ‘display value’ in a variable somewhere for use in the next step.->
