--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>My Calculator</header>
         <div id="container">
             <div id="displayDiv">
-                9
+                
             </div>
             <div id="keysDiv">
                 <div id="k7" class="numberbtn">7</div>
@@ -38,10 +38,19 @@
                 <div id="kEquals">=</div>
             </div>
         </div>
-        <script src="js/rps.js" defer></script>
+        <script src="js/calculator.js" defer></script>
     </body>
 </html>
 
 <!--Create the functions that populate the display when you 
     click the number buttons… you should be storing the 
-    ‘display value’ in a variable somewhere for use in the next step.->
+    ‘display value’ in a variable somewhere for use in the next step.
+    
+    Make the calculator work! You’ll need to store the first number 
+    that is input into the calculator when a user presses an operator, 
+    and also save which operation has been chosen and then operate() 
+    on them when the user presses the “=” key.
+
+    You should already have the code that can populate the display, 
+    so once operate() has been called, update the 
+    display with the ‘solution’ to the operation.->
