all operators and keys work fine. Calculator doesn't break whenmaking different key combinations, like pressing an operator after pressing equals botton; or pressing equals botton repeatedly after pressing equals botton. Missing backspace function, highlighting bottons on hover, highlighting pressed operator bottons, and giving a limit to the text content of the display.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <body>
         <header>My Calculator</header>
         <div id="container">
-            <div id="displayDiv">
-                
-            </div>
+            <div id="displayDiv"></div>
             <div id="keysDiv">
                 <div id="k7" class="numberbtn">7</div>
                 <div id="k8" class="numberbtn">8</div>
