calculator fully functional. All operations work. Need to add floating point button, limit number of digits allowed on screen, work on visual design, and add the keyboard support

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>My Calculator</header>
         <div id="container">
-            <div id="displayDiv"></div>
+            <div id="displayDiv">0</div>
             <div id="keysDiv">
                 <div id="k7" class="numberbtn">7</div>
                 <div id="k8" class="numberbtn">8</div>
@@ -39,16 +39,3 @@
         <script src="js/calculator.js" defer></script>
     </body>
 </html>
-
-<!--Create the functions that populate the display when you 
-    click the number buttons… you should be storing the 
-    ‘display value’ in a variable somewhere for use in the next step.
-    
-    Make the calculator work! You’ll need to store the first number 
-    that is input into the calculator when a user presses an operator, 
-    and also save which operation has been chosen and then operate() 
-    on them when the user presses the “=” key.
-
-    You should already have the code that can populate the display, 
-    so once operate() has been called, update the 
-    display with the ‘solution’ to the operation.->
