added decimal point function, and added comma separator for thousands. Added scientific notation to results larger than 13 digits. EVerything works well

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="k2" class="numberbtn">2</div>
                 <div id="k3" class="numberbtn">3</div>
                 <div id="kSubtract" class="operatorBtn">−</div>
-                <div id="kDot"></div>
+                <div id="kDot">.</div>
                 <div id="k0" class="numberbtn">0</div>
                 <div id="k+/-"></div>
                 <div id="kAdd" class="operatorBtn">+</div>    
