just need to add some CSS to operator buttons when pressed, some effects to display. Haven't tested app on mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>My Calculator</header>
         <div id="container">
             <div id="displayDiv">0</div>
-            <div id="keysDiv" tabindex="0">
+            <div id="keysDiv">
                 <div data-key="7" id="k7" class="numberbtn">7</div>
                 <div data-key="8" id="k8" class="numberbtn">8</div>
                 <div data-key="9" id="k9" class="numberbtn">9</div>
